--- a/signup.html
+++ b/signup.html
@@ -37,6 +37,7 @@
 
             <button type="submit">Register</button>
         </form>
+        <span>Already Registered? <a href="login.html">Log In</a></span>
     </div>
 </body>
 
