work in progress for college project

--- a/update.html
+++ b/update.html
@@ -10,8 +10,9 @@
 
 <body>
     <div id="wrapper">
+        <span>Hello User_Name!</span>
         <div class="hello-title">
-            <span>Please Fill Up Your Details</span>
+            <span>Update Your Details</span>
         </div>
         <form action="">
 
@@ -19,30 +20,27 @@
                 <div class="first-div">
                     <div class="txt-field">
                         <label for="f_name">Full Name</label>
-                        <input type="text" name="" id="" placeholder="enter your full name">
+                        <input type="text" name="" id="">
                     </div>
                     <div class="txt-field">
                         <label for="f_name">Phone Number</label>
-                        <input type="number" name="" id="" placeholder="your phone number">
+                        <input type="number" name="" id="">
                     </div>
 
                     <div class="txt-field">
                         <label for="password">Password</label>
-                        <input type="password" name="" id="" placeholder="create password">
+                        <input type="password" name="" id="">
                     </div>
-                    <div class="txt-field">
-                        <label for="password">Confirm Password</label>
-                        <input type="password" name="" id="" placeholder="re-enter password">
-                    </div>
+                    
                 </div>
                 <div class="second-div">
                     <div class="txt-field">
                         <label for="f_name">Address</label>
-                        <input type="text" name="" id="" placeholder="your full address">
+                        <input type="text" name="" id="">
                     </div>
                     <div class="txt-field">
                         <label for="area">Area</label>
-                        <select name="" id="" aria-placeholder="Select Your Area">
+                        <select name="" id="">
                             <option value="" selected>Select Your Area</option>
                             <option value="">Kalanki</option>
                             <option value="">Naikap</option>
@@ -66,9 +64,8 @@
                 </div>
             </div>
 
-            <button type="submit">Register</button>
+            <button type="submit">Update Details</button>
         </form>
-        <span>Already Registered? <a href="login.html">Log In</a></span>
     </div>
 </body>
 
