service part added

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
                 <div class="logo">
                     <a href="">
                         <img src="images/logo.png" alt="">
-
                     </a>
                 </div>
-
                 <nav>
                     <ul>
                         <li><a href="">Home</a></li>
@@ -31,8 +29,8 @@
                 </nav>
                 <div class="login-panel">
                     <ul>
-                        <li><a href="">Login</a></li>
-                        <li><a href="">Register</a></li>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="register.html">Register</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,10 +46,52 @@
                         Our dedicated team ensures precision and convenience, making home maintenance stress-free and
                         satisfying.</span>
 
-                        <a href="">Read More</a>
+                    <a href="">Read More</a>
                 </div>
                 <div class="banner-img">
                     <img src="images/banner.png" alt="">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="small-flex">
+            <div class="service">
+                <h2>Look for individual service providers in your area!</h2>
+
+                <div class="service-wrapper">
+                    <div class="service-flex">
+                        <a href="">
+                            <img src="images/carpenter.png" alt="">
+                            <h3>A Carpenter</h3>
+                        </a>
+
+                    </div>
+                    <div class="service-flex">
+                        <a href="">
+                            <img src="images/painter.png" alt="">
+                            <h3>A Painter</h3>
+
+                        </a>
+
+                    </div>
+                    <div class="service-flex">
+                        <a href="">
+                            <img src="images/electrician.png" alt="">
+                            <h3>An Electrician</h3>
+
+                        </a>
+
+                    </div>
+                    <div class="service-flex">
+                        <a href="">
+                            <img src="images/plumber.png" alt="">
+                            <h3>A Plumber</h3>
+
+                        </a>
+
+
+                    </div>
                 </div>
             </div>
         </div>
