--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 
             <button type="submit">Login</button>
         </form>
-        <span>Do Not Have An Account? <a href="signup.html">Register Now</a></span>
+        <span>Do Not Have An Account? <a href="register.html">Register Now</a></span>
     </div>
 </body>
 
