--- a/index.html
+++ b/index.html
@@ -1,100 +1,133 @@
 <!DOCTYPE html>
+<!--=== Coding by CodingLab | www.codinglabweb.com === -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!----======== CSS ======== -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!----===== Iconscout CSS ===== -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
+    <title>User Registration Form</title>
 </head>
 
 <body>
-    <header>
-        <div class="flex-box">
-            <div class="my-navbar">
-                <div class="logo">
-                    <a href="">
-                        <img src="images/logo.png" alt="">
-                    </a>
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Plumbers</a></li>
-                        <li><a href="">Electricians</a></li>
-                        <li><a href="">Carpenters</a></li>
-                        <li><a href="">Painters</a></li>
+    <div class="container">
+        <header>Registration</header>
 
-                    </ul>
-                </nav>
-                <div class="login-panel">
-                    <ul>
-                        <li><a href="login.html">Login</a></li>
-                        <li><a href="register.html">Register</a></li>
-                    </ul>
+        <form action="#" novalidate>
+            <div class="form first">
+                <div class="details personal">
+                    <span class="title">Personal Details</span>
+
+                    <div class="fields">
+                        <div class="input-field">
+                            <label>Full Name</label>
+                            <input type="text" placeholder="Enter your name" required>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Age</label>
+                            <input type="number" placeholder="Enter your age" required>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Email</label>
+                            <input type="text" placeholder="Enter your email" required>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Mobile Number</label>
+                            <input type="number" placeholder="Enter mobile number" required>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Gender</label>
+                            <select required>
+                                <option disabled selected>Select gender</option>
+                                <option>Male</option>
+                                <option>Female</option>
+                                <option>Others</option>
+                            </select>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Occupation</label>
+                            <select required>
+                                <option disabled selected>Select your occupation</option>
+                                <option>Plumber</option>
+                                <option>Electrician</option>
+                                <option>Painter</option>
+                                <option>Carpenter</option>
+
+                            </select>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="details ID">
+                    <span class="title">Address Details</span>
+
+                    <div class="fields">
+                        <div class="input-field">
+                            <label>Area</label>
+                            <select required>
+                                <option disabled selected>Select your area</option>
+                                <option>Thankot</option>
+                                <option>Kalanki</option>
+                                <option>Gurujudhara</option>
+                                <option>Bafal</option>
+                            </select>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Full Address</label>
+                            <input type="text" placeholder="Enter your address" required>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="details PASSWORD">
+                    <span class="title">Password Details</span>
+
+                    <div class="fields">
+                        <div class="input-field">
+                            <label>Create Password</label>
+                            <input type="password" id="passwordField" placeholder="Create new password" required>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Confirm Password</label>
+                            <input type="password" id="passwordField2" placeholder="Re-enter password" required>
+                        </div>
+                        <div class="input-field show-password">
+                            <input type="checkbox" id="passwordToggler" onclick="togglePassword()"> <label
+                                for="passwordToggler">Show
+                                Password</label>
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+                <button class="nextBtn">
+                    <span class="btnText">Submit</span>
+                    <i class="uil uil-navigator"></i>
+                </button>
             </div>
-        </div>
-    </header>
 
-    <main>
-        <div class="flex-box">
-            <div class="banner-wrap">
-                <div class="text">
-                    <h1>Kathmandu Home<span>Solutions</span></h1>
-                    <span>Connect with local experts for reliable and community-driven home repairs with just one call.
-                        Our dedicated team ensures precision and convenience, making home maintenance stress-free and
-                        satisfying.</span>
+        </form>
 
-                    <a href="">Read More</a>
-                </div>
-                <div class="banner-img">
-                    <img src="images/banner.png" alt="">
-                </div>
-            </div>
+    </div>
 
-        </div>
-
-        <div class="small-flex">
-            <div class="service">
-                <h2>Look for individual service providers in your area!</h2>
-
-                <div class="service-wrapper">
-                    <div class="service-flex">
-                        <a href="">
-                            <img src="images/carpenter.png" alt="">
-                            <h3>A Carpenter</h3>
-                        </a>
-
-                    </div>
-                    <div class="service-flex">
-                        <a href="">
-                            <img src="images/painter.png" alt="">
-                            <h3>A Painter</h3>
-
-                        </a>
-
-                    </div>
-                    <div class="service-flex">
-                        <a href="">
-                            <img src="images/electrician.png" alt="">
-                            <h3>An Electrician</h3>
-
-                        </a>
-
-                    </div>
-                    <div class="service-flex">
-                        <a href="">
-                            <img src="images/plumber.png" alt="">
-                            <h3>A Plumber</h3>
-
-                        </a>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
